tests/semantica/invalid/metodos/test4.ctds
program
	{
		
		integer foo(integer x){
			return x;
		}

		void main(){
			foo(2 + true);
		}
	}